Bugfix, buttons visible over connect modal

--- a/src/components/Overview.css
+++ b/src/components/Overview.css
@@ -219,7 +219,6 @@
     cursor: pointer;
     padding: 10px;
     transition: transform 0.3s ease-in-out;
-    z-index: 11;
 }
 
 
@@ -241,7 +240,7 @@
 }
 @media (max-width: 768px) { 
 .iconWraper{
-    transform: scale(1.1);
+
     box-shadow: 0 0 8px var(--clrorange);
 }
 
