--- a/src/components/walletConnector.css
+++ b/src/components/walletConnector.css
@@ -5,7 +5,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: -1;
 }
 .WalletConnector{
     position: fixed;
